--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.0.0",
+    "axios": "^0.26.1",
+    "html-react-parser": "^1.4.12",
+    "moment": "^2.29.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
